--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-app",
   "private": true,
+  "homepage": "https://daniel-monsalve-villegas.github.io/legal-host",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
